add env to gitignore

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 export OPENAI_KEY = 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
+
+export YOUTUBE_API_KEY = AIzaSyAzHV_PEA_r9RuheRGAgdDT4tDvjIQI5oQ
